tests/compile_fail/invalid_non_lit.rs
use better_cstr::c;

fn main() {
    c!(std::ops::Add::add(34, 35));
}
